force-app/main/default/objects/Maintenance_Task__c/Maintenance_Task__c.object-meta.xml
<CustomObject>
    <description>Tarea de mantenimiento</description>
    <label>Maintenance Task</label>
    <nameField>
        <label>Maintenance Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>