force-app/main/default/objects/Maintenance_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
  >Descripción detallada de la tarea de mantenimiento: qué hay que hacer, contexto adicional o instrucciones para el equipo que la ejecuta.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>