force-app/main/default/objects/Maintenance_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description
  >Fecha límite para completar la tarea de mantenimiento. Se usa para priorizar la cola de trabajo y detectar tareas vencidas.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>