force-app/main/default/objects/Maintenance_Task__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description
  >Costo estimado de la tarea de mantenimiento, usado para presupuestar antes de registrar el gasto real en Expense__c.</description>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>