force-app/main/default/objects/Maintenance_Task__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description
  >Propiedad a la que pertenece esta tarea de mantenimiento. Relación de tipo Lookup (no Master-Detail): el registro es obligatorio (required), pero no se elimina en cascada si se borra la propiedad.</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Maintenance Tasks</relationshipLabel>
    <relationshipName>Maintenance_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>