force-app/main/default/objects/Maintenance_Task__c/fields/Room__c.field-meta.xml
<CustomField>
    <fullName>Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Habitación en la que se realiza la tarea de mantenimiento. Lookup opcional (deleteConstraint SetNull): si se borra la habitación, el campo simplemente queda vacío en vez de eliminar la tarea.</description>
    <label>Room</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Maintenance Tasks</relationshipLabel>
    <relationshipName>Maintenance_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>